--- a/Case.html
+++ b/Case.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Destinations</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="casestyle.css">
 
+</head>
+
+<body>
+  <div class="box">
+        <img src="images/case/foto1.png" class="img3">
+        <div class="boxmsg">
+            03   Testing and Deployment
+        </div>
+        <span class="devider"></span>
+
+
+        <div class="boxmsg">
+            <button class="btn btn-warning text-dark" id="2">Page 1</button> <button class="btn btn-warning text-dark" id="3">Page 2</button>
+            <p id="pr1">Discovery and Planning The company starts by having<br>
+            discussions with the client to understand their needs,<br>
+            objectives, and target audience. They gather all relevant<br>
+            information about the project's scope,<br>
+            goals, and timeline. Once the requirements are clear,<br>
+            the development and design team collaborates<br>
+            to create a detailed project plan. This plan outlines<br>
+            the project's milestones, deliverables,<br>
+            technologies to be used, and the estimated timeline<br>
+            for each phase of the project.<br>
+            </p>
+            <p id="pr2">Despite their long-standing success in the retail industry,<br>
+                SunaSport faced a critical challenge: they lacked an online presence.<br>
+                The absence of a website and mobile app limited their ability to serve<br>
+                their customers in the digital age, especially during the rise of e-commerce.<br>
+                </p>
+            
+        </div>
+</body>
