--- a/Case.html
+++ b/Case.html
@@ -15,6 +15,16 @@
 
 <body>
   <div class="box">
+      <header class="header">
+        <a href="#" class="logo"><img src="images/fab shrinked.png"></a>
+        <nav class="navbar">
+          <a href="index.html" class="navi">Home</a>
+          <a href="page2.html" class="navi">Services</a>
+          <a href="page3.html" class="navi">About</a>
+          <a href="page4.html" class="navi">Case Studies</a>
+          <a href="page5.html"><button class="button">CONTACT</button></a>
+        </nav>
+      </header>
         <img src="images/case/foto1.png" class="img3">
         <div class="boxmsg">
             03   Testing and Deployment
