--- a/page5.html
+++ b/page5.html
@@ -37,3 +37,83 @@
         <a href="page5.html"><button class="button">CONTACT</button></a>
       </nav>
     </header>
+    <!--animation-->
+    <div class="anim" style="background-image: linear-gradient(#FFD3DE,#FF7DA7);"></div>
+    <div class="anim" style="top: 65%; background-image: radial-gradient(#FEA1BE,#EE0A67);"></div>
+    <div class="anim" style="top: 35%; background-image: radial-gradient(#FEA1BE,#EE0A67);"></div>
+    <div class="maintext">
+      <div class="animated-figure"></div>
+      <h1 class="display-3" style="font-family: mBold;">NEED OUR SERVICES?<br>WE’D LOVE TO DISCUSS.</h1>
+    </div>
+    <a href="mailto:your.email@example.com"><button class="button" style="margin-left:350px; width: 150px; margin-top: 30px; font-family: mLight; font-size: 17px;">Get in Touch</button></a>
+    <div class="firstbox">
+      <div class="vyn">
+      <h1 class="h1 text-white" style="margin-right: 300px; margin-top: 50px;">Help us Improve!</h1>
+      <p class="h5" style="font-family: mRegular; color:gray; text-align: left;">Your feedback is <b>immensely </b>appreciated and plays a crucial role in our 
+        <br>continuous efforts to enhance our services.<br>
+        <i>Thank you for taking the time to share your valuable insights with us.</i></p>
+    </div>
+    <div class="submit-forma">
+      <section class="con">
+        <header class="text-white h2" style="font-family: mBold;">Registration Form</header>
+        <form action="#" class="form">
+          <div class="input-box">
+            <label class="text-white h5 font-weight-bold" style="font-family: mBold;">Full Name</label>
+            <input type="text" placeholder="Enter full name" required />
+          </div>
+          <div class="input-box">
+            <label class="text-white h5 font-weight-bold" style="font-family: mBold;">Email Address</label>
+            <input type="text" placeholder="Enter email address" required />
+          </div>
+          <div class="column">
+            <div class="input-box">
+              <label class="text-white h5 font-weight-bold" style="font-family: mBold;">Phone Number</label>
+              <input type="number" placeholder="Enter phone number" required />
+            </div>
+            <div class="input-box">
+              <label class="text-white h5 font-weight-bold" style="font-family: mBold;">Birth Date</label>
+              <input type="date" placeholder="Enter birth date" required />
+            </div>
+          </div>
+          <div class="gender-box">
+            <h3 class="text-white h5 font-weight-bold" style="font-family: mBold;">Gender</h3>
+            <div class="gender-option">
+              <div class="gender">
+                <input type="radio" id="check-male" name="gender" checked />
+                <label for="check-male" class="text-white">Male</label>
+              </div>
+              <div class="gender">
+                <input type="radio" id="check-female" name="gender" />
+                <label for="check-female" class="text-white">Female</label>
+              </div>
+              <div class="gender">
+                <input type="radio" id="check-other" name="gender" />
+                <label for="check-other" class="text-white">Prefer Not To Say</label>
+              </div>
+            </div>
+          </div>
+          <div class="input-box address">
+            <label class="text-white h5 font-weight-bold" style="font-family: mBold;">Address</label>
+            <input type="text" placeholder="Enter street address" required />
+            <input type="text" placeholder="Enter street address line 2" required />
+            <div class="column">
+              <div class="select-box">
+                <select>
+                  <option hidden>Country</option>
+                  <option>Kosovo</option>
+                  <option>Albania</option>
+                  <option>United States</option>
+                  <option>United Kingdom</option>   
+                </select>
+              </div>
+              <input type="password" placeholder="Enter any password(not required)"/>
+            </div>
+            <div class="column">
+              <input type="text" placeholder="Enter your region" required />
+              <input type="number" placeholder="Enter postal code" required />
+            </div>
+          </div>
+          <button class="button" id="sub">Submit</button>
+        </form>
+      </section>
+    </div>
