--- a/About.html
+++ b/About.html
@@ -52,5 +52,34 @@
             </button>
           </div>
 
+    
+          <!--About bruda-->
+          <section id="about" class="about-section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-12 col-12">
+                        <div class = "about-img">
+                            <img src="images/box3.png" alt="" class="img-fluid">
+                        </div>
+
+                    </div>
+                    <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
+                        <div class="about-text text-white">
+                            <h2>you ask and we provide</h2>
+                            <p>At BBROS we work with you to gain in-depth insight into your product idea and the underlying<br>
+                                business value - we feel that there is nothing more essential than understanding your vision<br>
+                                and context. This will enable us to present you with a tailor-made offer for the project.<br>
+                                Always there to work on Software Developments which stress the importance of individuals<br>
+                                and interactions, responding to change and producing working software that has value<br>
+                                for your business.</p>
+                                <a href="#" class="btn btn-warning">Learn more</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+          </section>
+
+
 
 </html>
