--- a/Case.html
+++ b/Case.html
@@ -14,6 +14,30 @@
 </head>
 
 <body>
+    <header class="header">
+        <a href="#" class="logo"><img src="images/fab shrinked.png"></a>
+        <nav class="navbar">
+          <a href="index.html" class="navi">Home</a>
+          <a href="page2.html" class="navi">Services</a>
+          <a href="page3.html" class="navi">About</a>
+          <a href="page4.html" class="navi">Case Studies</a>
+          <a href="page5.html"><button class="button">CONTACT</button></a>
+        </nav>
+      </header>
+
+      <div class="anim"></div>
+      <div class="anim" style="top: 65%;"></div>
+      <div class="anim" style="top: 35%;"></div>
+      <div class="maintext">
+        <div class="animated-figure"></div>
+        <h1 style="font-family: mRegular;">NOT JUST EVERY<br> DESIGN & DEVELOPMENT<br> AGENCY</h1>
+      </div>
+      <div class="secondmain">
+        <br><br><br><br><br><br><br><br><br><br><br>
+        
+      </div>
+    
+
   <div class="box">
       <header class="header">
         <a href="#" class="logo"><img src="images/fab shrinked.png"></a>
