--- a/About.html
+++ b/About.html
@@ -142,6 +142,72 @@
             </div>
           </section>
 
+    <!--services section-->
+
+          <section id="company" class="company section-padding">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-header text-white text-center pb-5">
+                    <h2> Our featured</h2>
+                    <p> we just do it</p>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 col-md-6 col-lg-3">
+                  <div class="card text-white text-center bg-white pb-2">
+                    <div class="card-body text-dark">
+                      <div class="img-area mb4">
+                        <img src="images/foto1.png" alt="" class="img-fluid">
+                      </div>
+                      <h3 class="card-title">BBROS</h3>
+                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
+                      <button class="btn btn-warning text-dark">Learn More</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                  <div class="card text-white text-center bg-white pb-2">
+                    <div class="card-body text-dark">
+                      <div class="img-area mb4">
+                        <img src="images/foto2.png" alt="" class="img-fluid">
+                      </div>
+                      <h3 class="card-title">BBROS</h3>
+                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
+                      <button class="btn btn-warning text-dark">Learn More</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                  <div class="card text-white text-center bg-white pb-2">
+                    <div class="card-body text-dark">
+                      <div class="img-area mb4">
+                        <img src="images/foto3.png" alt="" class="img-fluid">
+                      </div>
+                      <h3 class="card-title">BBROS</h3>
+                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
+                      <button class="btn btn-warning text-dark">Learn More</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                  <div class="card text-center bg-white pb-2">
+                    <div class="card-body text-dark">
+                      <div class="img-area mb4">
+                        <img src="images/foto4.png" alt="" class="img-fluid">
+                      </div>
+                      <h3 class="card-title">BBROS</h3>
+                      <p class="lead">yo brother asdasdasd<br>aniosdhasdk<br></p>
+                      <button class="btn btn-warning text-dark">Learn More</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          
+
 
 
 
