--- a/page5.html
+++ b/page5.html
@@ -93,11 +93,12 @@
             </div>
           </div>
           <div class="input-box address">
-            <label class="text-white h5 font-weight-bold" style="font-family: mBold;">Address</label>
+             <label class="text-white h5 font-weight-bold" style="font-family: mBold;">Address</label>
             <input type="text" placeholder="Enter street address" required />
             <input type="text" placeholder="Enter street address line 2" required />
             <div class="column">
               <div class="select-box">
+                <keygen name="select-box">
                 <select>
                   <option hidden>Country</option>
                   <option>Kosovo</option>
@@ -106,6 +107,7 @@
                   <option>United Kingdom</option>   
                 </select>
               </div>
+              <keygen name="password">
               <input type="password" placeholder="Enter any password(not required)"/>
             </div>
             <div class="column">
