--- a/Case.html
+++ b/Case.html
@@ -196,6 +196,15 @@
           </div>
         </div>
       </div>
+
+    </div>
+    <video width="640" height="360" controls>
+        <source src="videos/videoplayback (2).mp4" type="video/mp4">
+    </video>
+    <video width="640" height="360" controls>
+        <source src="videos/videoplayback (3).mp4" type="video/mp4">
+    </video>
+    
     <section class="footer">
         <div class="footer-row">
           <div class="footer-col">
