--- a/Case.html
+++ b/Case.html
@@ -197,6 +197,56 @@
         </div>
       </div>
 
+    <ul class="accordion">
+        <li>
+            <input type="radio" name="accordion" id="first">
+            <label for="first">UI/UX</label>
+            <div class = "content">
+                <p>Custom software and web development ensures you to have your brand tailor-made<br> 
+                    to your tastes or to your demographic reception’s preferences after collecting feedback data.<br>
+                    Customizing the details of your company image helps boost you in the eyes of your audience<br>
+                    against the similarities and quality of your rivals. By designing, implementing, launching<br>
+                    and maintaining software for your specific audience, you also get to promote and distribute<br>
+                    advertisements more swiftly as it narrows down fields and captions in the algorithm.</p>
+            </div>
+        </li>
+        <li>
+            <input type="radio" name="accordion" id="second">
+            <label for="second">E-Commerce Solutions</label>
+            <div class = "content">
+                <p>Custom software and web development ensures you to have your brand tailor-made<br> 
+                    to your tastes or to your demographic reception’s preferences after collecting feedback data.<br>
+                    Customizing the details of your company image helps boost you in the eyes of your audience<br>
+                    against the similarities and quality of your rivals. By designing, implementing, launching<br>
+                    and maintaining software for your specific audience, you also get to promote and distribute<br>
+                    advertisements more swiftly as it narrows down fields and captions in the algorithm.</p>
+            </div>
+        </li>
+        <li>
+            <input type="radio" name="accordion" id="third">
+            <label for="third">Web Application</label>
+            <div class = "content">
+                <p>Custom software and web development ensures you to have your brand tailor-made<br> 
+                    to your tastes or to your demographic reception’s preferences after collecting feedback data.<br>
+                    Customizing the details of your company image helps boost you in the eyes of your audience<br>
+                    against the similarities and quality of your rivals. By designing, implementing, launching<br>
+                    and maintaining software for your specific audience, you also get to promote and distribute<br>
+                    advertisements more swiftly as it narrows down fields and captions in the algorithm.</p>
+            </div>
+        </li>
+        <li>
+            <input type="radio" name="accordion" id="fourth">
+            <label for="fourth">Cyber Security & Penetration Testing</label>
+            <div class = "content">
+                <p>Custom software and web development ensures you to have your brand tailor-made<br> 
+                    to your tastes or to your demographic reception’s preferences after collecting feedback data.<br>
+                    Customizing the details of your company image helps boost you in the eyes of your audience<br>
+                    against the similarities and quality of your rivals. By designing, implementing, launching<br>
+                    and maintaining software for your specific audience, you also get to promote and distribute<br>
+                    advertisements more swiftly as it narrows down fields and captions in the algorithm.</p>
+                </div>
+            </li>
+        </ul>
     </div>
     <video width="640" height="360" controls>
         <source src="videos/videoplayback (2).mp4" type="video/mp4">
