--- a/Case.html
+++ b/Case.html
@@ -14,16 +14,16 @@
 </head>
 
 <body>
-    <header class="header">
+  <header class="header">
         <a href="#" class="logo"><img src="images/fab shrinked.png"></a>
         <nav class="navbar">
-          <a href="index.html" class="navi">Home</a>
-          <a href="page2.html" class="navi">Services</a>
-          <a href="page3.html" class="navi">About</a>
-          <a href="page4.html" class="navi">Case Studies</a>
-          <a href="page5.html"><button class="button">CONTACT</button></a>
+            <a href="index.html" class="navi">Home</a>
+            <a href="page2.html" class="navi">Services</a>
+            <a href="about.html" class="navi">About</a>
+            <a href="Case.html" class="navi">Case Studies</a>
+            <a href="page5.html"><button class="button">CONTACT</button></a>
         </nav>
-      </header>
+    </header>
 
       <div class="anim"></div>
       <div class="anim" style="top: 65%;"></div>
